// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shimmer component tests Shimmer default 1`] = `
<RNSVGSvgViewAndroid
  accessibilityRole="progressbar"
  accessible={true}
  angle={45}
  bbHeight="100%"
  bbWidth="100%"
  delay={0}
  duration={1000}
  focusable={false}
  shimmerColor="#e6e6e6"
  shimmerColorOpacity={1}
  shimmerWaveColor="#fafafa"
  shimmerWaveColorOpacity={1}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "overflow": "hidden",
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <RNSVGGroup
    fill={
      {
        "payload": -16777216,
        "type": 0,
      }
    }
  >
    <RNSVGDefs>
      <RNSVGLinearGradient
        gradient={
          [
            0.1,
            -1644826,
            0.2,
            -328966,
            0.3,
            -1644826,
          ]
        }
        gradientTransform={
          [
            0.7071067811865476,
            0.7071067811865475,
            -0.7071067811865475,
            0.7071067811865476,
            0,
            0,
          ]
        }
        gradientUnits={0}
        name="gradient"
        x1="-2"
        x2="-1"
        y1="0%"
        y2="0%"
      />
      <RNSVGClipPath
        fill={
          {
            "payload": -16777216,
            "type": 0,
          }
        }
        name="shimmerView"
      >
        <RNSVGRect
          fill={
            {
              "payload": -16777216,
              "type": 0,
            }
          }
          height="20"
          rx="3"
          ry="3"
          width="100"
          x="90"
          y="70"
        />
        <RNSVGRect
          fill={
            {
              "payload": -16777216,
              "type": 0,
            }
          }
          height="20"
          rx="3"
          ry="3"
          width="150"
          x="90"
          y="42"
        />
        <RNSVGRect
          fill={
            {
              "payload": -16777216,
              "type": 0,
            }
          }
          height="20"
          rx="3"
          ry="3"
          width="200"
          x="90"
          y="15"
        />
      </RNSVGClipPath>
    </RNSVGDefs>
    <RNSVGGroup
      fill={
        {
          "payload": -16777216,
          "type": 0,
        }
      }
    >
      <RNSVGRect
        clipPath="shimmerView"
        fill={
          {
            "brushRef": "gradient",
            "type": 1,
          }
        }
        height="100%"
        propList={
          [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgViewAndroid>
`;

exports[`Shimmer component tests Shimmer with style prop 1`] = `
<RNSVGSvgViewAndroid
  accessibilityRole="progressbar"
  accessible={true}
  angle={45}
  bbHeight="100"
  bbWidth="300"
  delay={0}
  duration={1000}
  focusable={false}
  shimmerColor="#e6e6e6"
  shimmerColorOpacity={1}
  shimmerWaveColor="#fafafa"
  shimmerWaveColorOpacity={1}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "height": 100,
        "overflow": "hidden",
        "width": 300,
      },
      {
        "flex": 0,
        "height": 100,
        "width": 300,
      },
    ]
  }
>
  <RNSVGGroup
    fill={
      {
        "payload": -16777216,
        "type": 0,
      }
    }
  >
    <RNSVGDefs>
      <RNSVGLinearGradient
        gradient={
          [
            0.1,
            -1644826,
            0.2,
            -328966,
            0.3,
            -1644826,
          ]
        }
        gradientTransform={
          [
            0.7071067811865476,
            0.7071067811865475,
            -0.7071067811865475,
            0.7071067811865476,
            0,
            0,
          ]
        }
        gradientUnits={0}
        name="gradient"
        x1="-2"
        x2="-1"
        y1="0%"
        y2="0%"
      />
      <RNSVGClipPath
        fill={
          {
            "payload": -16777216,
            "type": 0,
          }
        }
        name="shimmerView"
      >
        <RNSVGRect
          fill={
            {
              "payload": -16777216,
              "type": 0,
            }
          }
          height="20"
          rx="3"
          ry="3"
          width="100"
          x="90"
          y="70"
        />
        <RNSVGRect
          fill={
            {
              "payload": -16777216,
              "type": 0,
            }
          }
          height="20"
          rx="3"
          ry="3"
          width="150"
          x="90"
          y="42"
        />
        <RNSVGRect
          fill={
            {
              "payload": -16777216,
              "type": 0,
            }
          }
          height="20"
          rx="3"
          ry="3"
          width="200"
          x="90"
          y="15"
        />
      </RNSVGClipPath>
    </RNSVGDefs>
    <RNSVGGroup
      fill={
        {
          "payload": -16777216,
          "type": 0,
        }
      }
    >
      <RNSVGRect
        clipPath="shimmerView"
        fill={
          {
            "brushRef": "gradient",
            "type": 1,
          }
        }
        height="100"
        propList={
          [
            "fill",
          ]
        }
        width="300"
        x="0"
        y="0"
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgViewAndroid>
`;
